--- a/src/assets/styles/_shared.scss
+++ b/src/assets/styles/_shared.scss
@@ -1,3 +1,6 @@
 $bg-color: #9e4d77;
 $base-color: #04AA6D;
+$link-color: #42b983;
+$hover-color: #f0ec0e;
+$flex-container-color: #f1f1f1;
 $border-dark: rgba($base-color, 0.88);
