--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -14,7 +14,7 @@ body {
 .flex-container {
     display: flex;
     background-color: $flex-container-color;
-    height: 500px;
+    max-height: 550px;
 }
 
 .flex-container > div {
@@ -46,3 +46,43 @@ body {
     background-color: $hover-color;
     opacity: 1;
   }
+
+  .mySlides {
+    display: none;
+    text-align: center;
+  }
+
+  .slideshow-container {
+    position: relative;
+    background: #f2f2f2;
+    border: 1px solid;
+    border-color: lightgoldenrodyellow;
+  }
+
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  color: #888;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  right: 0;
+}
+
+.prev {
+  left: 0;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+}
