--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -19,10 +19,10 @@ body {
 
 .flex-container > div {
     font-family: 'Battambang', cursive;
-    background-color: DodgerBlue;
-    color: white;
+    background-color: DodgerBlue;   
     text-align: left;
     font-size: 20px;
+    overflow: hidden;
   }
 
   .mytopBtn {
