--- a/src/assets/styles/_shared.scss
+++ b/src/assets/styles/_shared.scss
@@ -3,6 +3,8 @@ $base-color: #04AA6D;
 $link-color: #42b983;
 $hover-color: #f0ec0e;
 $outline-color:#4CAF50;
+$menu-color: #2c3e50;
+$text-color: white;
 $flex-container-color: #f1f1f1;
 $border-dark: rgba($base-color, 0.88);
 
